--- a/po/en_US.po
+++ b/po/en_US.po
@@ -5,7 +5,7 @@
 # *                                                                       *
 # *************************************************************************
 #
-# This file is distributed under the same licence as Star Traders.
+# This file is distributed under the same license as the trader package.
 #
 # Contributors:
 #   John Zaitseff <J.Zaitseff@zap.org.au>, 2011-17.
@@ -15,7 +15,7 @@ msgstr ""
 "Project-Id-Version: trader 7.10\n"
 "Report-Msgid-Bugs-To: J.Zaitseff@zap.org.au\n"
 "POT-Creation-Date: 2017-05-20 12:28+1000\n"
-"PO-Revision-Date: 2017-05-20 10:00+1000\n"
+"PO-Revision-Date: 2017-05-22 06:39+1000\n"
 "Last-Translator: John Zaitseff <J.Zaitseff@zap.org.au>\n"
 "Language-Team: English\n"
 "Language: en_US\n"
