--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -8,16 +8,16 @@
 # This file is distributed under the same license as the trader package.
 #
 # Contributors:
-#   John Zaitseff <J.Zaitseff@zap.org.au>, 2011-17.
+#   John Zaitseff <J.Zaitseff@zap.org.au>, 2011-16, 2017.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: trader 7.10\n"
+"Project-Id-Version: trader 7.10-pre1\n"
 "Report-Msgid-Bugs-To: J.Zaitseff@zap.org.au\n"
 "POT-Creation-Date: 2017-05-20 12:28+1000\n"
-"PO-Revision-Date: 2017-05-22 06:39+1000\n"
+"PO-Revision-Date: 2017-05-22 06:59+1000\n"
 "Last-Translator: John Zaitseff <J.Zaitseff@zap.org.au>\n"
-"Language-Team: English (British)\n"
+"Language-Team: English (British) <(nothing)>\n"
 "Language: en_GB\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
